feat: add content, fix: correct checklist

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             </h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/road.jpg"
+                alt="Асфальтированная дорога вдоль рощи деревьев,на горизонте закат солнца.Иллюстрация."
                 class="card__image"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;вдохновение&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -42,7 +42,10 @@
                 проникнуться основами и настроиться на учёбу. И, возможно,
                 подумать, как новые знания могут повлиять на ваше будущее.
               </p>
-              <p>Место для ваших воспоминаний о начале обучения.</p>
+              <p>
+                Ощущение, что впереди меня ждет длинный интересный путь изучения
+                новой информации и сферы деятельности.
+              </p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
@@ -87,14 +90,14 @@
             <h2 class="card__title">1 спринт: Я — чистый лист</h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/clean_sheet.jpg"
+                alt="На рабочем столе изображены чистый лист,ручка,карандаши,на переднем плане окно.Иллюстрация."
                 class="card__image contrast"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;с чего начать?&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -105,7 +108,10 @@
                 вопросы: с чего начать? а вдруг будет слишком сложно? что, если
                 я не справлюсь?
               </p>
-              <p>Место для ваших воспоминаний о начале первого спринта.</p>
+              <p>
+                Изучение теории было интересным, казалось, что всё было понятно,
+                но страх перед сдачей первой проектной работы присутствовал.
+              </p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
@@ -150,14 +156,14 @@
             <h2 class="card__title">1 спринт: А если не получится?</h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/victory.jpg"
+                alt="На вершине горы силуэт человека,в небе светит яркое солнце.Иллюстрация."
                 class="card__image brightness"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;только вперед&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -165,7 +171,10 @@
                 Радость могла быстро померкнуть и смениться ожиданием провала.
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
-              <p>Место для ваших воспоминаний об окончании первого спринта.</p>
+              <p>
+                С радостью перехожу во второй спринт, готова изучать новую
+                теорию!
+              </p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
@@ -210,14 +219,14 @@
             <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/puzzlement.jpg"
+                alt="Лицо девушки,выражающее озадаченность и задумчивость.Иллюстрация."
                 class="card__image saturate"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;немного страшно&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -227,7 +236,10 @@
                 вовсе и не подвержены перфекционизму и вместо того, чтобы
                 сделать идеально, старались просто сделать.
               </p>
-              <p>Место для ваших воспоминаний о начале второго спринта.</p>
+              <p>
+                Новой информации становится больше, понимаю, какой большой мир
+                frontend-разработки, и не понимаю, как это всё выучить.
+              </p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
@@ -272,14 +284,14 @@
             <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/care.jpg"
+                alt="Парень и девушка сидят на диване,с заботой обнимают друг друга и улыбаются.Иллюстрация."
                 class="card__image invert"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;поддержка&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -290,7 +302,10 @@
                 поддавался. Осваивать что-то новое легче, когда рядом есть
                 единомышленники, не правда ли?
               </p>
-              <p>Место для ваших воспоминаний об окончании второго спринта.</p>
+              <p>
+                Поддержка близких не дает сдаваться и мотивирует двигаться
+                вперед.
+              </p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
@@ -335,14 +350,14 @@
             <h2 class="card__title">3 спринт: Обходные стратегии</h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/ocean.jpg"
+                alt="Волны океана бьются о скалы.Иллюстрация."
                 class="card__image hue-rotate"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;много теории&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -350,7 +365,10 @@
                 момент вам могло показаться, что решения просто иссякли. Значит,
                 пришло время посмотреть на задачу под другим углом.
               </p>
-              <p>Место для ваших воспоминаний о начале третьего спринта.</p>
+              <p>
+                Ощущение, что frontend-разработчик должен уметь всё. Появилось
+                чувство “ничего не успеть”.
+              </p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
@@ -395,14 +413,14 @@
             <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/defocus.jpg"
+                alt="Горное озеро среди гор,на небе светит яркое солнце.Иллюстрация."
                 class="card__image blur"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;всё получится!&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -412,7 +430,10 @@
                 пожить. В такие моменты очень нужна концентрация. Вспомните,
                 откуда вы её черпали.
               </p>
-              <p>Место для ваших воспоминаний об окончании третьего спринта.</p>
+              <p>
+                Спринт оказался еще сложнее, однако, после сдачи проектной
+                работы, чуствуешь, что всё не зря, впереди много интересного.
+              </p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
@@ -457,14 +478,14 @@
             <h2 class="card__title">«Сейчас я здесь»</h2>
             <div class="image-wrapper">
               <img
-                src="./images/image.jpg"
-                alt=""
+                src="./images/forward.jpg"
+                alt="Асфальтированная дорога среди высоких гор,на асфальте следы от шин.Иллюстрация."
                 class="card__image mix-filter"
                 loading="lazy"
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;/HTML&gt;</div>
+              <div class="watermark">&lt;длинный путь&gt;</div>
             </div>
             <div class="card__content">
               <p>
@@ -476,8 +497,8 @@
                 процесс познания. Ведь часто путь — и есть результат.
               </p>
               <p>
-                Место, чтобы остановиться, подумать и написать, что вы
-                чувствуете в этой точке пути.
+                Здесь понимаешь, что любое дело, которое начинаешь с нуля, будет
+                сложным. Главное верить в себя и идти до конца.
               </p>
             </div>
             <div class="card__buttons">
@@ -525,13 +546,13 @@
         onclick="window['dialog-pop-up'].showModal()"
         aria-controls="dialog-pop-up"
       >
-        <svg class="floppy-icon floppy-icon__filter" viewBox="0 0 40 40">
+        <svg class="floppy-icon floppy-icon__filter" viewBox="0 0 40 40" aria-hidden="true">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
       <dialog class="pop-up" id="dialog-pop-up">
-        <svg class="floppy-icon pop-up__icon" viewBox="0 0 40 40">
+        <svg class="floppy-icon pop-up__icon" viewBox="0 0 40 40" aria-hidden="true">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <p class="pop-up__description">Вставьте дискету, чтобы продолжить</p>
