fix: correct the review errors

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;вдохновение&gt;</div>
+              <span class="watermark">&lt;вдохновение&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -54,6 +54,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
@@ -75,7 +76,7 @@
                   <path
                     class="sparks"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
-                    fill="var(--animation-fill-color-accent)"
+                    fill="var(--animation-fill-color)"
                   />
                 </svg>
               </button>
@@ -97,7 +98,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;с чего начать?&gt;</div>
+              <span class="watermark">&lt;с чего начать?&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -120,6 +121,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
@@ -163,7 +165,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;только вперед&gt;</div>
+              <span class="watermark">&lt;только вперед&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -183,6 +185,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
@@ -226,7 +229,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;немного страшно&gt;</div>
+              <span class="watermark">&lt;немного страшно&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -248,6 +251,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
@@ -291,7 +295,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;поддержка&gt;</div>
+              <span class="watermark">&lt;поддержка&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -314,6 +318,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
@@ -357,7 +362,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;много теории&gt;</div>
+              <span class="watermark">&lt;много теории&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -377,6 +382,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
@@ -420,7 +426,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;всё получится!&gt;</div>
+              <span class="watermark">&lt;всё получится!&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -442,6 +448,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
@@ -485,7 +492,7 @@
                 width="696"
                 height="696"
               />
-              <div class="watermark">&lt;длинный путь&gt;</div>
+              <span class="watermark">&lt;длинный путь&gt;</span>
             </div>
             <div class="card__content">
               <p>
@@ -508,6 +515,7 @@
                   viewBox="0 0 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
                 >
                   <g class="heart">
                     <path
